<?php

/**
 * 
 * @tonisun
 */
interface Controller {
    public function fetchAll(): array | null;
}